# Metis_ParseBot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.frontend  README.md  TODO.md  architecture.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  start.bat  start.ps1  start_backend.ps1  start_frontend.ps1  to be improved.txt  worklog.md  workplan.md
docker/: nginx.conf
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: Badge.tsx  Button.tsx  Card.tsx  ContentCard.tsx  ContentListItem.tsx  Layout.tsx  ScoreDisplay.tsx  index.ts
frontend/src/hooks/: index.ts
frontend/src/pages/: ContentDetail.tsx  Contents.tsx  Dashboard.tsx  LearningRecords.tsx  Settings.tsx  index.ts
frontend/src/services/: api.ts
frontend/src/types/: index.ts
src/: __init__.py
src/agents/: __init__.py  base.py
src/agents/analyzer/: __init__.py  agent.py  knowledge.py  prompts.py  summarizer.py
src/agents/collector/: __init__.py  agent.py  prompts.py
src/agents/collector/sources/: __init__.py  academic.py  arxiv.py  base.py  news.py  tech_news.py
src/agents/reviewer/: __init__.py  agent.py  prompts.py  scorer.py
src/api/: main.py  schemas.py
src/api/routes/: analyze.py  collect.py  contents.py  learning.py  review.py  settings.py
src/core/: __init__.py  config.py  exceptions.py  logging.py
src/db/: __init__.py  crud.py  models.py
src/db/migrations/: init_db.py
src/services/: pipeline.py  scheduler.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_config.py  test_exceptions.py  test_scorer.py  test_sources.py
